--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img alt="brand" src="img/_logo.png" ></a>
+      <a class="navbar-brand" href="#"><img alt="brand" src="img/logo.png" ></a>
 		<!--<a class="navbar-brand" href="#"><img alt="brand" src="img/gollum_ico.gif" ></a>-->
       </div>
 
@@ -47,7 +47,7 @@
 			</ol>
 		<div class="carousel-inner">
 			<div class="item active">
-				<img src="img/_dark_vador.jpg" alt="dark">
+				<img src="img/dark-vador.jpg" alt="dark">
 				<div class="container-fluid">
 					<div class="carousel-caption">
 						<h1>Sauron is a very good bro,</h1>
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img src="img/_dark_vador.jpg" alt="dark">
+				<img src="img/dark-vador.jpg" alt="dark">
 				<div class="container-fluid">
 					<div class="carousel-caption">
 						<h1>Sauron is a very good bro,</h1>
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 			<div class="item ">
-				<img src="img/_dark_vador.jpg" alt="dark">
+				<img src="img/dark-vador.jpg" alt="dark">
 				<div class="container-fluid">
 					<div class="carousel-caption">
 						<h1>Sauron is a very good bro,</h1>
@@ -105,7 +105,7 @@
 		<div class="row">
 			<div class="col-md-offset-1 col-md-3">
 				<a href="#" class="thumbnail">
-					<img src="img/_gandalf.png" alt="Gandalf">
+					<img src="img/gandalf.png" alt="Gandalf">
 					<div class="reward">Reward <strong>1000</strong><br>golden coins</div>
 					<div class="target_name">Gandalf</div>
 					<div class="comment">a mercenary</div>
@@ -113,7 +113,7 @@
 			</div>
 			<div class=" col-md-3">
 				<a href="#" class="thumbnail">
-					<img src="img/_aragorn.png" alt="Aragorn">
+					<img src="img/aragorn.png" alt="Aragorn">
 					<div class="reward">Reward <strong>800</strong><br>golden coins</div>
 					<div class="target_name">Aragorn</div>
 					<div class="comment">the son of Peter Pan</div>
@@ -121,7 +121,7 @@
 			</div>
 			<div class=" col-md-3">
 				<a href="#" class="thumbnail">
-					<img src="img/_gimli.png" alt="Gimli">
+					<img src="img/gimli.png" alt="Gimli">
 					<div class="rewardgimli"><strong>DEAD</strong></div>
 					<div class="target_name_gimli">Gimli</div>
 					<div class="comment">Agrid father RIP</div>
@@ -139,7 +139,7 @@
 
 				Duo populo numquam cu, cum ut tation putant. Rebum consequuntur sit ei, usu ea stet quaestio, solum quodsi mollis mea an. No mea probatus reprimique ullamcorper, blandit disputationi vix te. Te nisl illud pri, ius putent pertinax ne. Ex oblique singulis voluptaria vel, quis habeo sed no. Vel sale dicam cotidieque et, suas illum falli has et.</div>
 				<div class="col-md-offset-1 col-md-3">
-					<img class="img-circle" src="img/_coin_sauron2.png" alt="coin">
+					<img class="img-circle" src="img/coin-sauron2.png" alt="coin">
 				</div>
 			</div>
 			<div class="row">	
@@ -158,7 +158,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-offset-2 col-md-2">
-				<img src="img/_hunter1.png" alt="hunter1">
+				<img src="img/hunter1.png" alt="hunter1">
 			</div>
 			<div class="col-md-2">
 				<h3>elveskiller22</h3>
@@ -166,7 +166,7 @@
 				<div class="hate">12 hate</div>
 			</div>
 			<div class="col-md-offset-2 col-md-2">
-				<img src="img/_hunter2.png" alt="hunter2">
+				<img src="img/hunter2.png" alt="hunter2">
 			</div>
 			<div class="col-md-2">
 				<h3>goblin45</h3>
@@ -221,7 +221,7 @@
 				<div class="panel-body col-md-10 precious_text" >
 					my precioooooooouuuuuuussssssss ! erk erk, ! we want our preciioooouuussssss !!!
 				</div>
-				<div class="col-md-4"><img src="img/_gollum.png" class="img" alt="gollum"></div>
+				<div class="col-md-4"><img src="img/gollum.png" class="img" alt="gollum"></div>
 			</div>
 		</div>
 	</div>
@@ -239,11 +239,11 @@
 				Odio dicta graeci ut mel. Ea eam aliquip ponderum, duo ei mnesarchum reformidans. Duo id unum primis similique. Impetus percipit usu id, facete philosophia nec ne, consul qualisque maluisset ea pro. At vel molestiae delicatissimi. An vix suas quodsi philosophia, duo docendi pertinax ad.
 			</div>
 			<div class="col-md-4">
-                <img src="img/_army.png" alt="army" width="100%">
+                <img src="img/army.png" alt="army" width="100%">
             </div>
 		</div>
 		<div class="row">
-			<div class="col-md-offset-1 col-md-4"><img src="img/_weneedyou-1.png" alt="join" width="100%"></div>
+			<div class="col-md-offset-1 col-md-4"><img src="img/weneedyou-1.png" alt="join" width="100%"></div>
 			<div class="col-md-offset-3 col-md-3 btninfo">More info on<br><button type="button" class="btn btn-info">sauronrulesthemall.com</button></div>
 		</div>
 	</div>
@@ -274,7 +274,7 @@
 				</div>
 			</div>
 			<div class="col-md-5">
-				<div><img src="img/_map.png" alt="map" width="100%"></div>
+				<div><img src="img/map.png" alt="map" width="100%"></div>
 			</div>
 		</div>
 	</div>
@@ -302,7 +302,7 @@
 					<li class="list-group-item">sauron4ever.com</li>
 					<li class="list-group-item">Follow him on twitter</li>
 					<li class="list-group-item">Hurricane8</li>
-					<li class="list-group-item"><img src="img/_logo.png" alt="logo"></li>
+					<li class="list-group-item"><img src="img/logo.png" alt="logo"></li>
 				</ul>
 			</div>
 		</div>
